Networking/Ingress/ingress-resource-with-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wear-watch
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    http:
      paths:
      - path: /wear
        backend:
          name: wear-service
          port:
            number: 80
      - path: /watch
        backend:
          name: watch-service
          port:
            number: 80
