Networking/Ingress/ingress-with-rewrite-target.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wear-watch
spec:
  rules:
  - host: wear.my-online-store.com
    http:
      paths:
      - backend:
          name: wear-service
          port:
            number: 80
  - host: watch.my-online-store.com
    http:
      paths:
      - backend:
          name: watch-service
          port:
            number: 80
